--- a/src/companents/Main/main.module.css
+++ b/src/companents/Main/main.module.css
@@ -1,4 +1,11 @@
 .wr {
+    display: flex;
     height: 90px;
     width:100%;
+    align-items: center;
+    margin-top: 120px;
+    
+    justify-content: center;
+  
+  
 }
