--- a/src/companents/ProductItem/productItem.module.css
+++ b/src/companents/ProductItem/productItem.module.css
@@ -4,10 +4,12 @@
     padding: 10px;
     width: 200px;
     gap:20px;
-    background-color: transparent;
+    border-width: 3px;
     border-radius: 20px;
     color: black;
     margin: 0;
+    background-color: rgb(243, 243, 147);
+   
 }
 .card-body {
 
