--- a/src/companents/ProductItem/productItem.module.css
+++ b/src/companents/ProductItem/productItem.module.css
@@ -26,3 +26,14 @@
     width: 30px;
     height: 30px;
   }
+  .buttonBuy {
+    background-color: #ee9f0b;
+    color: black;
+padding: 8px;
+border-radius: 16px;
+border: 1px solid;
+font-weight: 600;
+margin-top: 8px;
+margin-right: 8px;
+cursor: pointer;
+  }
